--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,11 +36,15 @@ services:
     depends_on:
       - backend
     ports:
-      - "3000:3000"
+      - "5173:5173"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
     environment:
-      REACT_APP_API_URL: http://backend:8080
+      VITE_API_URL: http://backend:8080
     networks:
       - task-network
+    tty: true
 
 volumes:
   postgres_data:
