chore: add api secret key to api env

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -22,4 +22,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 cors.allowed-origins=http://localhost:5173,http://172.18.0.4:5173,http://127.0.0.1:5173
 
+api.security.token.secret=${API_SECURITY_TOKEN_SECRET}
+
 server.port=8080
