--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -84,6 +84,13 @@
             <artifactId>java-jwt</artifactId>
             <version>4.4.0</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <version>7.1.0-M1</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
