chore: add redis config environment to application.properties

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -24,4 +24,8 @@ cors.allowed-origins=http://localhost:5173,http://172.18.0.4:5173,http://127.0.0
 
 api.security.token.secret=${API_SECURITY_TOKEN_SECRET}
 
+spring.cache.type=${SPRING_CACHE_TYPE}
+spring.data.redis.host=${SPRING_DATA_REDIS_HOST}
+spring.data.redis.port=${SPRING_DATA_REDIS_PORT}
+
 server.port=8080
