feat: enable application logs in the terminal

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -28,4 +28,7 @@ spring.cache.type=${SPRING_CACHE_TYPE}
 spring.data.redis.host=${SPRING_DATA_REDIS_HOST}
 spring.data.redis.port=${SPRING_DATA_REDIS_PORT}
 
+logging.level.org.springframework.cache=DEBUG
+logging.level.org.springframework.data.redis=DEBUG
+
 server.port=8080
