--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,25 +10,25 @@ spring.application.name=backend
 #spring.datasource.password=
 #spring.jpa.hibernate.ddl-auto=update
 
+server.port=${PORT:8080}
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
-spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 
-cors.allowed-origins=http://localhost:5173,http://172.18.0.4:5173,http://127.0.0.1:5173
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173}
 
-api.security.token.secret=${API_SECURITY_TOKEN_SECRET}
+api.security.token.secret=${API_SECURITY_TOKEN_SECRET:defaultsecret0192837465xyzabc}
 
-spring.cache.type=${SPRING_CACHE_TYPE}
-spring.data.redis.host=${SPRING_DATA_REDIS_HOST}
-spring.data.redis.port=${SPRING_DATA_REDIS_PORT}
+spring.cache.type=${SPRING_CACHE_TYPE:none}
+spring.data.redis.host=${SPRING_DATA_REDIS_HOST:localhost}
+spring.data.redis.port=${SPRING_DATA_REDIS_PORT:6379}
 
-logging.level.org.springframework.cache=DEBUG
-logging.level.org.springframework.data.redis=DEBUG
-
-server.port=8080
+logging.level.org.springframework.cache=INFO
+logging.level.org.springframework.data.redis=INFO
