--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,7 +14,7 @@ server.port=${PORT:8080}
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.url=${DB_URL_TO_SPRING}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
