--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-cors.allowed-origins=http://localhost:5173,http://172.18.0.4:5173,http://127.0.0.1:5173
+cors.allowed-origins=http://localhost:5173
 
 api.security.token.secret=${API_SECURITY_TOKEN_SECRET}
 
